crates/toml_edit/tests/snapshots/invalid/table/duplicate-key-12.stderr
TOML parse error at line 4, column 4
  |
4 | [a.b]
  |    ^
duplicate key
